# forge-fitness

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: deps.py
api/app/api/v1/: router.py
api/app/api/v1/routes/: auth.py  bodyweight.py  exercise_analytics.py  exercises.py  profiles.py  recommendations.py  templates.py  workout_sessions.py
api/app/core/: config.py  security.py
api/app/db/: base.py  seed.py  session.py
api/app/models/: __init__.py  bodyweight.py  enums.py  exercise.py  mixins.py  profile.py  recommendation.py  template.py  user.py  workout.py
api/app/repositories/: bodyweight.py  exercise_analytics.py  exercises.py  profiles.py  recommendations.py  templates.py  users.py  workouts.py
api/app/schemas/: auth.py  bodyweight.py  common.py  exercise.py  exercise_analytics.py  profile.py  recommendation.py  template.py  workout.py
api/app/services/: auth.py  bodyweight.py  errors.py  exercise_analytics.py  exercises.py  profiles.py  recommendations.py  templates.py  workouts.py
api/migrations/: env.py
api/migrations/versions/: 202607110001_initial_schema.py  202607120001_bodyweight_entries.py  202607130001_workout_reliability.py
api/tests/: conftest.py  test_auth_profiles.py  test_bodyweight.py  test_exercise_analytics.py  test_exercises_templates_workouts.py  test_full_backend_flow.py  test_health.py  test_recommendations.py  test_seed_metadata.py  test_workout_reliability.py
infrastructure/: README.md
mobile/: .eslintrc.js  app.json  (+5 more)
(+43 files in other folders)
