[project]
name = "forge-api"
version = "0.1.0"
description = "FastAPI backend for Forge workout tracking"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "email-validator>=2.2",
  "fastapi>=0.115",
  "passlib[argon2]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "PyJWT>=2.10",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
